[package]
authors = ["Guillem Cordoba <guillem.cordoba@gmail.com>"]
description = "A Rust client for the Holochain Conductor API"
edition = "2021"
homepage = "https://github.com/holochain/holochain-client-rust"
keywords = ["holochain", "client", "conductor-api"]
license = "CAL-1.0"
name = "holochain_client"
readme = "README.md"
repository = "https://github.com/holochain/holochain-client-rust"
resolver = "2"
version = "0.4.1"

[workspace]
members = ["fixture/zomes/foo", "utilities"]

[workspace.dependencies]
holochain_zome_types =  { git = "https://github.com/holochain/holochain", rev = "76ab474c806a6e5e238de22e6187f1d02921e5c0"}

[dependencies]
again = "0.1"
anyhow = "1.0"
ed25519-dalek = "1"
holo_hash = { git = "https://github.com/holochain/holochain", rev = "76ab474c806a6e5e238de22e6187f1d02921e5c0", features = ["encoding"] }
holochain_conductor_api = { git = "https://github.com/holochain/holochain", rev = "76ab474c806a6e5e238de22e6187f1d02921e5c0"}
holochain_serialized_bytes = "0.0.52"
holochain_types = { git = "https://github.com/holochain/holochain", rev = "76ab474c806a6e5e238de22e6187f1d02921e5c0"}
holochain_websocket = { git = "https://github.com/holochain/holochain", rev = "76ab474c806a6e5e238de22e6187f1d02921e5c0"}
holochain_zome_types = { workspace = true }
serde = "1"
url = "2.2"

[dev-dependencies]
arbitrary = "1.2"
holochain = { git = "https://github.com/holochain/holochain", rev = "76ab474c806a6e5e238de22e6187f1d02921e5c0", features = ["test_utils"] }
rand = "0.7"
tokio = {version = "1.3", features = ["full"]}
utilities = {path = "utilities"}
